# pdpolygonapi

./: NOTICE  README.md  pyproject.toml  scope_error.py
examples/: apiPolygon.ipynb
pdpolygonapi/: __init__.py  _pdpolygonapi_base.py  pdpolygonapi.py
reference_data/: SPY_231001_250301_day_1.csv  SPY_231001_250301_month_1.csv  SPY_231001_250301_quarter_1.csv  SPY_231001_250301_week_1.csv  SPY_250101_250301_minute_1.csv  SPY_250101_250301_minute_30.csv
src/pdpolygonapi/: __init__.py  _pdpolygonapi_base.py  pdpolygonapi.py
tests/: api_test.py  conftest.py  data_fetch_test.py  test_api_initialization.py  test_api_initialzation.py  test_data_fetch.py  test_ohlcv_cache.py  test_ohlcv_exceptions.py  test_ohlcv_stocks.py  txxt_ohlcv_cache.py
tests/reference_data/: SPY_231001_250301_day_1.csv  SPY_231001_250301_month_1.csv  SPY_250101_250301_hour_1.csv
