[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdpolygonapi"
version = "0.0.2"
authors = [
    { name = "Daniel Goldfarb", email = "dgoldfarb.github@gmail.com" },
]
description = "A python API for the polygon.io REST API that returns Pandas objects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danielgoldfarb/pdpolygonapi"
"Bug Tracker" = "https://github.com/danielgoldfarb/pdpolygonapi/issues"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s (%(filename)s:%(lineno)s) [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "service.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s (%(filename)s:%(lineno)s) [%(levelname)s] %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
